fixed the spaces between the headers & subheaders - made every section uniquely visible

--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,7 @@ html{
   #subheader{
     color: rgb(233, 233, 233);
     padding-top: 0px;
+    font-weight: 100;
   }
   .grid-container {
     display: grid;
@@ -121,30 +122,7 @@ html{
     background-color: white;
     color: black;
   }
-  .letter-1{
-    color: #AC58FA;
-  }
-  .letter-2{
-    color: #CC2EFA;
-  }
-  .letter-3{
-    color: #9A2EFE;
-  }
-  .letter-4{
-    color: #5F04B4;
-  }
-  .letter-5{
-    color: #29088A;
-  }
-  .letter-6{
-    color: #29088A;
-  }
-  .letter-7{
-    color: #B4045F;
-  }
-  .letter-8{
-    color: #610B21;
-  }
+ 
   .product-headers{
     font-family: Arial;
     margin-left: 200px;
@@ -466,4 +444,9 @@ video{
 
 #scrollBtn:hover {
   background-color: #000000; 
+}
+#product-head{
+  color: rgb(192, 192, 192);
+  font-size: 12px;
+  margin-bottom: 0px;
 }
